--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-item/conocimientos-item.component.css
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-item/conocimientos-item.component.css
@@ -58,10 +58,22 @@
 .icono-borrar {
     color:red;
     cursor: pointer;
+    font-size: 1.4em;
 }
 
-.icono-borrar:hover{    
-    transform: scale(1.3)
+#icono-editar {
+    color:rgb(36, 95, 184);
+    cursor: pointer;
+    font-size: 1.6em;
+}
+
+button:hover{
+    transform:scale(1.2);
+}
+
+button {
+    background-color: transparent;
+    border: none;
 }
 
 
@@ -74,6 +86,9 @@
 @media  screen and (max-width: 800px){
     .skills-bar {
         width: 100%       
+    }
+    .conocimientos-iconos{
+        margin-right: 0px !important
     }
 } 
 
