--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos.component.html
@@ -7,29 +7,32 @@
                     [icon]="faPlus" 
                     *ngIf="modoEdicion" 
                     data-bs-toggle="modal" 
-                    data-bs-target="#conocimiento-modal">
+                    data-bs-target="#conocimiento-modal-crear">
                 </fa-icon> 
                 <fa-icon
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#titulo-conocimiento-modal">
+                    data-bs-target="#conocimiento-modal-titulo">
                 </fa-icon>
             </div>
             
         </div>
         <div class="d-flex flex-wrap">
-            <app-conocimientos-item
-                          
+            <app-conocimientos-item                          
                 *ngFor="let conocimiento of conocimientos"
                 [conocimiento]="conocimiento"
                 class="conocimientos-div my-3 w-50 d-flex align-items-center"
-                data-aos="zoom-in" data-aos-duration="900" data-aos-easing="ease-in-out"          
-            
+                data-aos="zoom-in" data-aos-duration="900" data-aos-easing="ease-in-out"         
             >
             </app-conocimientos-item>  
         </div>              
     </div>                                 
 </section>
 <app-conocimientos-modal (modificarTitulo)="cambiarTitulo($event)"></app-conocimientos-modal>
+<app-conocimientos-modal-crear></app-conocimientos-modal-crear>
+<app-conocimientos-modal-editar
+    *ngFor="let conocimiento of conocimientos"
+    [conocimiento]="conocimiento">
+</app-conocimientos-modal-editar>
 
