--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.css
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.css
@@ -40,6 +40,11 @@ h3{
     font-weight: bold;
 }
 
+form p {
+    margin-bottom: 2px !important;
+    font-weight: normal !important;
+}
+
 input, textarea {
     background-color: black;
     border-color: gray;
