--- a/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/Proyecto-Angular/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -13,7 +13,7 @@
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#titulo-experiencia-modal">
+                    data-bs-target="#experiencia-modal-titulo">
                 </fa-icon>
             </div>
             
@@ -26,8 +26,15 @@
                     class="boton-exp-item"
                     (click)="onSelect(experiencia); desaparecerPrimerExp(); alternarExperiencias()"
                     > 
-                    {{experiencia.empresa}}
-                    <fa-icon [icon]="faX" *ngIf="modoEdicion" class="icono-borrar ms-auto"></fa-icon>
+                    {{experiencia.empresa}}                   
+                    <fa-icon [icon]="faX"  *ngIf="modoEdicion" id="icono-borrar"></fa-icon> 
+                    <fa-icon 
+                            id="icono-editar"
+                            [icon]="faSquarePen" 
+                            *ngIf="modoEdicion"
+                            data-bs-toggle="modal" 
+                            [attr.data-bs-target]="'#experiencia-modal-editar-' + experiencia.id">
+                    </fa-icon>                   
                 </button>                                    
                 <div                        
                     class="lista-seleccion animacion-lista-seleccion"
@@ -56,4 +63,9 @@
 <app-experiencia-laboral-modal
     (modificarTitulo)="cambiarTitulo($event)">
 </app-experiencia-laboral-modal>
+<app-experiencia-laboral-modal-crear></app-experiencia-laboral-modal-crear>
+<app-experiencia-laboral-modal-editar
+    *ngFor="let experiencia of experiencias"
+    [experiencia]="experiencia">
+</app-experiencia-laboral-modal-editar>
 
