--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-item/formacion-academica-item.component.css
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-item/formacion-academica-item.component.css
@@ -44,12 +44,23 @@
 .icono-borrar {
     color:red;
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 1.4em;
     margin-left: auto;
 }
 
-.icono-borrar:hover{    
-    transform: scale(1.3)
+#icono-editar {
+    color:rgb(36, 95, 184);
+    cursor: pointer;
+    font-size: 1.6em;
+}
+
+button:hover{
+    transform:scale(1.2);
+}
+
+button {
+    background-color: transparent;
+    border: none;
 }
 
 
