--- a/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-item/formacion-academica-item.component.html
+++ b/Proyecto-Angular/src/app/components/formacion-academica/formacion-academica-item/formacion-academica-item.component.html
@@ -15,7 +15,20 @@
     <div class="w-75 contenedor-texto">
         <div class="d-flex align-items-baseline">
             <h5>{{educacion.nombre}}</h5>
-            <fa-icon [icon]="faX" *ngIf="modoEdicion" class="icono-borrar"></fa-icon>
+            <div class="ms-auto">
+                <button>
+                    <fa-icon [icon]="faX" *ngIf="modoEdicion" class="icono-borrar"></fa-icon>    
+                  </button>       
+                  <button>
+                      <fa-icon 
+                              id="icono-editar"
+                              [icon]="faSquarePen" 
+                              *ngIf="modoEdicion" 
+                              data-bs-toggle="modal" 
+                              [attr.data-bs-target]="'#educacion-modal-editar-' + educacion.id">
+                      </fa-icon> 
+                  </button>
+            </div> 
         </div>
         <a href="{{educacion.urlInstitucion}}" target="_blank">@ {{educacion.institucion}}</a>
         <p id="p-descripcion">{{educacion.descripcion}}</p>
