--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-item/proyectos-item.component.css
@@ -25,9 +25,29 @@ img {
 
 #contenedor-texto {
     width: 50%;    
-    height: 300px;
-   
-    
+    height: 300px;    
+}
+
+.icono-borrar {
+    color:red;
+    cursor: pointer;
+    font-size: 1.4em;
+    margin-left: auto;
+}
+
+#icono-editar {
+    color:rgb(36, 95, 184);
+    cursor: pointer;
+    font-size: 1.6em;
+}
+
+button:hover{
+    transform:scale(1.2);
+}
+
+button {
+    background-color: transparent;
+    border: none;
 }
 
 .contenedor-tecnologias-iconos {     
@@ -51,17 +71,6 @@ img {
 
 .iconos:hover{
     filter: drop-shadow(0 0 7px lightblue)    
-}
-
-.icono-borrar {
-    color:red;
-    cursor: pointer;
-    font-size: 1.5em;
-    margin-left: auto;
-}
-
-.icono-borrar:hover{    
-    transform: scale(1.3)
 }
 
 @media screen and (max-width:900px) {
