--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -43,7 +43,7 @@ footer {
     width: 30%
 }
 
-.etiquetaModal2, .inputModal2 {
+.inputModal2 {
     overflow: auto;
     height: 100px;   
     max-height: 150px;
